force-app/main/default/objects/CventEvents__NominationNotificationsSettings__c/fields/CventEvents__Day__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Day__c</fullName>
    <description>Day of the week on which notifications are sent.</description>
    <inlineHelpText>Day of the week on which notifications are sent.</inlineHelpText>
    <label>Day</label>
    <length>9</length>
    <type>Text</type>
</CustomField>