force-app/main/default/objects/CventEvents__NominationNotificationsSettings__c/fields/CventEvents__Frequency__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Frequency__c</fullName>
    <description>Frequency of email notifications.</description>
    <inlineHelpText>Frequency of email notifications.</inlineHelpText>
    <label>Frequency</label>
    <length>11</length>
    <type>Text</type>
</CustomField>