force-app/main/default/objects/CventEvents__NominationNotificationsSettings__c/fields/CventEvents__Time__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__Time__c</fullName>
    <description>The hour of the day in GMT at which the notifications are sent.</description>
    <inlineHelpText>The hour of the day in GMT at which the notifications are sent.</inlineHelpText>
    <label>Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>